<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:textAlignment="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardBackgroundColor="@color/surface"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/white_bg"
            android:gravity="clip_horizontal|center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/limited_offer_bg"
                android:paddingHorizontal="16dp"
                android:paddingVertical="2dp"
                android:text="@string/subscribe_now"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="$3.29"
                android:textAlignment="center"
                android:textColor="@color/text_primary"

                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvMonth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/monthly"
                android:textAlignment="center"
                android:textColor="@color/text_primary"

                android:textSize="18sp" />

            <TextView
                android:id="@+id/btnBuyNow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:background="@drawable/one_month"
                android:gravity="center"
                android:paddingVertical="10dp"
                android:text="@string/buy_now"
                android:layout_marginBottom="3dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="70dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/baseline_check_24"
                    android:drawablePadding="7dp"
                    android:text="@string/high_speed_streaming"
                    android:textAlignment="center"
                    android:textColor="@color/text_primary"

                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/baseline_check_24"
                    android:drawablePadding="7dp"
                    android:text="@string/remove_all_ads"
                    android:textAlignment="center"
                    android:textColor="@color/text_primary"
                    android:textSize="16sp" />


            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>
