<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F4F6"
    tools:context=".activity.MainActivity">

    <RelativeLayout
        android:id="@+id/baner"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="-20dp"
        android:layout_marginEnd="-5dp"
        android:background="@drawable/medication_banner" />

    <LinearLayout
        android:id="@+id/calendar_header"
        android:layout_width="match_parent"
        android:layout_height="132dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="15dp"
        android:background="@color/white"
        android:elevation="2dp"
        android:orientation="vertical"
        android:paddingStart="14dp"
        android:paddingTop="10dp"
        android:paddingEnd="14dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/selected_date_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="今日 2026/5/11" />

            <ImageButton
                android:id="@+id/calendar_button"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/date"
                android:padding="8dp"
                android:src="@drawable/baseline_calendar_month_24" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/week_calendar_row"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:orientation="horizontal" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        app:itemIconTint="@color/bottom_nav_item"
        app:itemTextColor="@color/bottom_nav_item"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/main_bottom_nav" />

    <FrameLayout
        android:id="@+id/ad_view_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_nav" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reminder_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ad_view_container"
        android:layout_marginStart="15dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/no_reminder_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_nav"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/no_reminders"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_nav"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/a3_grad"
        android:clickable="true"
        android:contentDescription="@string/title_activity_add_reminder"
        android:src="@drawable/baseline_add_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/import_archive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_nav"
        android:layout_toLeftOf="@id/add_reminder"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/a3_grad"
        android:clickable="true"
        android:contentDescription="@string/import_archive"
        android:src="@drawable/ic_import_24" />

</RelativeLayout>
